# fiesta

./: .gitignore  LICENSE  README.md  docker-compose.yml  init_project.sh
.github/workflows/: pylint.yml
backend/: .pylintrc  Dockerfile  pyproject.toml  requirements.txt  wsgi.py
backend/app/: __init__.py  exceptions.py  models.py  routes.py  socket.py
backend/app/api/: __init__.py
backend/app/api/controllers/: __init__.py  auth_controller.py  game_controller.py
backend/app/api/routes/: __init__.py  auth_routes.py  game_routes.py  socket_routes.py
backend/app/config/: __init__.py  config.py  development.yaml
backend/app/core/: __init__.py
backend/app/core/repositories/: __init__.py  game_repository.py  player_association_repository.py  player_repository.py  player_round_repository.py  round_repository.py  user_repository.py  word_evolution_repository.py
backend/app/core/services/: __init__.py  auth_service.py  game_service.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  game.py  player.py  player_association.py  player_round.py  round.py  user.py  word_evolution.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/database/: __init__.py  base_repository.py  session.py
backend/app/security/: __init__.py  cors.py  jwt.py
backend/app/utils/: character_loader.py  characters.txt  decorator.py  loader.py
frontend/: .dockerigonre  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.js  App.tsx  index.tsx  styles.css
(+30 files in other folders)
